Fixed dropdown being too large on landscape mobile screens.

--- a/style.css
+++ b/style.css
@@ -287,7 +287,6 @@ a {
 	padding: 0;
 }
 
-
 .select2-container--default .select2-results>.select2-results__options {
 	max-height: inherit;
 }
@@ -312,6 +311,18 @@ a {
 	}
 	.select2-container--open .select2-dropdown--below {
 		margin: 0 -10px;
+	}
+}
+
+@media screen and (max-height: 500px) {
+	.select2-container {
+		margin: 0 10px;
+	}
+	.select2-container--open .select2-dropdown--below {
+		margin: 0 -10px;
+	}
+	.select2-container--default .select2-results>.select2-results__options {
+		max-height: 210px;
 	}
 }
 
